client/pages/NewForm/NewForm.module.css
h1,
h2,
h3,
h4 {
  font-family: "Poppins" !important;
}

.formElementsContainer {
  font-family: "DM Sans";
  width: 210px;
  height: 100%;
  display: block;
  padding-left: 12px;
  padding-right: 10px;
  padding-top: 12px;
  justify-content: left;
  background-color: #f4f7fb;
  border-radius: 10px;
  overflow-y: auto;
}

.newFormContainer {
  display: flex;
  height: 100vh;
  padding-bottom: 25%;
}

.title {
  font-size: 36px;
  font-weight: 700;
  line-height: 46px;
  color: #1e1e1e;
  padding-bottom: 10px;
}

.subtitle {
  font-size: 16px;
  font-weight: 700;
  padding-bottom: 10px;
  line-height: 25px;
}

.smallText {
  font-size: 12px;
  font-weight: 400;
  line-height: 25px;
}

.formTitleContainer {
  border-radius: 10px;
  border: 1px solid #aaaaaa;
  padding-top: 13px;
  padding-left: 25px;
  padding-right: 25px;
  padding-bottom: 23px;
  display: grid;
  margin-bottom: 8px;
  margin-right: 15px;
}

.formCanvasContainer {
  overflow-y: scroll;
  overflow-x: "hidden";
  margin-left: 15px;
  width: 100%;
}

.formTitle {
  font-size: 36px;
  font-weight: 700;
  line-height: 46px;
}

.formDescription {
  font-size: 15px;
  font-weight: 400;
}

.formTitle,
.formDescription {
  z-index: 2;
  margin-left: -5px;
  margin-right: -5px;
  padding-left: 5px;
  padding-right: 5px;
  width: 100%;
}

.canvasStyles {
  margin-right: 15px;
  border: 10px solid transparent;
  border-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg"><rect width="100%" height="100%" rx="9.5" fill="white" stroke="%23B01254" stroke-dasharray="20 20"/></svg>')
    10 round;
}

.canvasInnerContainer {
  padding-right: 50px;
}

.newFormHeader {
  display: flex;
  justify-content: space-between;
  padding-bottom: 10px;
}

.buttonGroup {
  display: flex;
  justify-content: space-between;
  gap: 25px;
}

.submitButton,
.cancelButton,
.previewButton {
  font-family: "DM Sans";
  width: 117px;
  height: 43px;
  font-size: 16px;
  line-height: 21px;
  border-radius: 21.5px;
}

.submitButton {
  color: #ffffff;
  background: #170cb4;
}

.cancelButton {
  color: #170cb4;
  background: #ffffff;
  border: 1px solid #170cb4;
}

.previewButton {
  width: 141px !important;
  color: #ffffff;
  background: #4238d5;
}

.submitButton:hover,
.submitButton:focus {
  outline: 1px solid blue;
  background-color: #2f26b7;
}

.cancelButton:hover,
.cancelButton:focus {
  outline: 1px solid blue;
  background-color: transparent;
}

.previewButton:hover,
.previewButton:focus {
  outline: 1px solid blue;
  background-color: #5b53d6;
}

.formNav {
  font-size: 18px;
  line-height: 25px;
  display: flex;
  flex-direction: row;
  padding-bottom: 10px;
  margin-bottom: 15px;
  margin-right: 33px;
  width: 100%;
  border-bottom: 1px solid #dfe5ee;
}

.activeSection {
  color: #170cb4;
  border-bottom: 1px solid #170cb4;
  margin-right: 10px;
}

.questionsNav,
.responsesNav {
  margin-right: 10px;
}

.textElementsText {
  padding-top: 8px;
}

